# mattilda-test

./: .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  compose.yml  dependencies.py  main.py  pyproject.toml  schemas.py
domain/models/: invoice.py  school.py  student.py
domain/services/: school_services.py  student_services.py
infrastructure/database/: db_engine.py  fixtures.py  orm.py
infrastructure/repositories/: base.py  postgres.py
routers/: invoices.py  schools.py  students.py
tests/: conftest.py
tests/integration/: conftest.py  test_invoices.py  test_schools.py  test_students.py
tests/unit/: conftest.py
