[project]
name = "mattilda-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.6",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
]
tests = [
    "pytest>=9.0.2",
]
