[project]
name = "mattilda-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "fastapi-pagination>=0.15.10",
]

[dependency-groups]
dev = ["ipython>=9.10.0", "pdbpp>=0.12.0.post1"]
tests = ["pytest>=9.0.2"]
