[project]
name = "mattilda-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "fastapi-pagination>=0.15.10",
]

[dependency-groups]
dev = ["ipython>=9.10.0", "pdbpp>=0.12.0.post1"]
tests = [
    "pytest>=9.0.2",
    "httpx>=0.23.0",
    "pytest-asyncio>=0.25.2",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
